--- a/CarryOver.html
+++ b/CarryOver.html
@@ -1,144 +1,313 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>종합현황 차트</title>
+  <title>지점별 대상자 명단</title>
 
-<style>
-  /* 카카오톡 색상 변수 정의 */
-  :root {
-    --kakao-yellow: #FEE500;
-    --kakao-black: #000000;
-    --kakao-gray: #666666;
-  }
-
-  /* 로딩 스피너 스타일 */
-  .loader {
-    border: 8px solid #f3f3f3;
-    border-top: 8px solid var(--kakao-yellow);
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: spin 1s linear infinite;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-    display: none;
-  }
-
-  @keyframes spin {
-    0% { transform: translate(-50%, -50%) rotate(0deg); }
-    100% { transform: translate(-50%, -50%) rotate(360deg); }
-  }
-
-  .iframe-container.loading {
-    position: relative;
-  }
-
-  .grid-container {
-    display: flex; /* 플렉스 컨테이너로 설정 */
-    flex-wrap: wrap; /* 아이템이 넘칠 경우 줄바꿈 */
-    gap: 15px; /* 그리드 아이템 간격 */
-    padding: 10px; /* 컨테이너 내부 여백 */
-    max-width: 1300px; /* 최대 너비 제한 */
-    margin: 0 auto; /* 가운데 정렬 */
-    justify-content: center; /* 수평 중앙 정렬 */
-  }
-  
-  /* PC 화면용 iframe 컨테이너 스타일 */
-  .iframe-container {
-    flex: 1 2 calc(40% - 20px); /* 너비 40%로 설정 (2:1 비율로 줄바꿈) */
-    min-width: 480px; /* 최소 너비 480px로 설정 */
-    height: 450px; /* 고정 높이 450px */
-    position: relative; /* 내부 iframe 배치 기준점 */
-    display: flex; /* 플렉스 컨테이너로 설정 */
-    justify-content: center; /* 수평 중앙 정렬 */
-    align-items: center; /* 수직 중앙 정렬 */    
-  }
-
-  /* PC 화면용 iframe 스타일 */
-  .iframe-container iframe {
-    transform: scale(1.1); /* 110% 크기로 확대 */
-    position: absolute; /* 절대 위치 설정 */
-    top: 0;
-    left: 0;
-    width: 90%; /* 부모 요소 기준 90% 너비 */
-    height: 90%; /* 부모 요소 기준 90% 높이 */    
-    border: none; /* 테두리 제거 */
-    box-shadow: 0 2px 6px rgba(0,0,0,0.4); /* 그림자 효과 */
-    border-radius: 8px; /* 모서리 둥글게 */
-    object-fit: contain; /* 비율 유지하며 맞춤 */
-    transform-origin: 0 0; /* transform의 기준점을 좌상단으로 설정 */
-  }
-
-  /* 모바일 화면용 스타일 (767px 이하) */
-  @media (max-width: 767px) {
-    .grid-container {      
-      gap: 50px; /* 모바일에서 간격 50px로 증가 */
-      padding: 10px; /* 모바일에서 패딩 10px로 설정 */
+  <style>
+    /* 카카오톡 색상 변수 정의 */
+    :root {
+      --kakao-yellow: #FEE500;
+      --kakao-black: #000000;
+      --kakao-gray: #666666;
     }
 
-    /* 모바일 화면용 iframe 컨테이너 스타일 */
-    .iframe-container {
-      flex: 1 1 100%; /* 전체 너비 사용 (한 줄에 하나씩) */
-      height: 250px; /* 높이 250px로 축소 */
-      min-width: 250px; /* 최소 너비 250px로 축소 */
+    /* 기본 HTML, Body 스타일 초기화 */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 98%;
+      overflow: hidden; /* 가로 스크롤 방지 (필요시) */
+      font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard", sans-serif; /* 시스템 폰트 사용 */
     }
 
-    /* 모바일 화면용 iframe 스타일 */
-    .iframe-container iframe {
-      transform: scale(0.75); /* 75% 크기로 축소 */
-      width: 133%; /* 축소로 인해 잘리지 않도록 너비 133%로 확장 */
-      height: 155%; /* 축소로 인해 잘리지 않도록 높이 155%로 확장 */
+    /* 메인 컨테이너 스타일 */
+    .container {
+      width: 97%; /* 전체 너비의 97% 사용 */
+      max-width: 100%; /* PC에서 최대 너비 제한 */
+      height: 100%;
+      margin: 0 auto; /* 가운데 정렬 */
+      padding: 10px; /* 내부 여백 */
+      border-radius: 12px; /* 모서리 둥글게 */
+      box-sizing: border-box; /* 패딩과 테두리를 너비/높이에 포함 */
+      display: flex; /* Flexbox 레이아웃 사용 */
+      flex-direction: column; /* 세로 방향 배치 */
     }
-  }
-</style>
+
+    /* 버튼 컨테이너 스타일 */
+    .result-container {
+      display: flex;
+      justify-content: center; /* 버튼 중앙 정렬 */
+      align-items: center;
+       /* 연도/월 선택이 없으므로 상단 여백 추가 */
+      margin-top: 10px;
+      margin-bottom: 15px; /* 하단 여백 증가 */
+      background-color: #FFFFFF;
+      color: #333D4B;
+      border-radius: 12px;
+      padding: 10px; /* 패딩 조정 */
+      font-family: "Pretendard", sans-serif;
+      font-weight: bold;
+      line-height: 1.5;
+    }
+
+     /* 토글 버튼 컨테이너 스타일 */
+     .toggle-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        max-width: 600px; /* 버튼 그룹 최대 너비 제한 (PC) */
+        background-color: #F0F0F0; /* 배경색 변경 */
+        border-radius: 8px;
+        padding: 4px;
+        flex-wrap: wrap; /* 모바일에서 버튼 줄 바꿈 허용 */
+        gap: 10px; /* 버튼 사이 간격 (wrap 시 사용) */
+      }
+
+      /* 토글 버튼 기본 스타일 */
+      .toggle-button {
+        border: none;
+        background: transparent; /* 기본 배경 투명 */
+        color: #555555; /* 기본 글자색 변경 */
+        padding: 8px 16px; /* 패딩 조정 */
+        cursor: pointer;
+        border-radius: 6px;
+        transition: background 0.3s, color 0.3s;
+        /* margin 제거 (gap 사용) */
+        font-size: 14px; /* 글자 크기 약간 줄임 */
+        font-weight: 500;
+        flex-grow: 1; /* 가능한 공간 차지 */
+        flex-basis: auto; /* 기본 크기 자동 */
+        text-align: center;
+        white-space: nowrap; /* 버튼 이름 줄바꿈 방지 */
+      }
+
+      /* 토글 버튼 활성화 상태 */
+      .toggle-button.active {
+        background: #FEE500; /* 활성 배경 흰색 */
+        color: var(--kakao-black);
+        font-weight: 600; /* 약간 더 굵게 */
+        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      }
+
+    /* 데이터 표시 영역 컨테이너 스타일 */
+    .dataFrame-container {
+      flex-grow: 1; /* 남은 세로 공간 차지 */
+      overflow: hidden; /* 내부 iframe 스크롤 제어 */
+      position: relative; /* iframe 위치 기준 */
+      border: 1px solid #EAEDEF; /* 테두리 추가 */
+      border-radius: 8px; /* 모서리 둥글게 */
+    }
+
+    /* 데이터 표시 iframe 뷰 (이전의 registrationRateView) */
+    #branchDataView {
+        width: 100%;
+        height: 100%;
+        overflow: auto; /* iframe 내용 넘칠 경우 스크롤 */
+    }
+
+    /* 데이터 표시 iframe (이전의 registrationRateFrame) */
+    #branchDataFrame {
+      display: block;
+      width: 100%;
+      height: 100%;
+      border: none; /* 컨테이너에 테두리가 있으므로 제거 */
+      transform: none; /* 스케일 제거 (기본) */
+    }
+
+    /* 숨김 처리용 클래스 (이제 사용되지 않지만, 혹시 모르니 유지) */
+    .hidden {
+        display: none !important;
+    }
+
+    /* 로딩 스피너 스타일 */
+    .loader {
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid var(--kakao-yellow);
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      animation: spin 1s linear infinite;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 9999;
+      display: none;
+    }
+
+    @keyframes spin {
+      0% { transform: translate(-50%, -50%) rotate(0deg); }
+      100% { transform: translate(-50%, -50%) rotate(360deg); }
+    }
+
+    .dataFrame-container.loading {
+      position: relative;
+    }
+
+    /* ===== 모바일 화면용 스타일 (768px 이하) ===== */
+    @media screen and (max-width: 768px) {
+      html, body {
+        height: 110%; /* 모바일에서도 높이 유지 시도 */
+        overflow: hidden; /* 필요 시 스크롤 허용 */
+      }
+      .container {
+        height: 100%; /* 모바일에서 전체 높이 사용 */
+        padding: 5px;
+        border-radius: 8px;
+        border: none;
+      }
+
+      .result-container {
+         margin-top: 5px;
+         margin-bottom: 10px;
+      }
+
+      .toggle-container {
+         max-width: 100%; /* 모바일 너비 제한 해제 */
+      }
+
+      .toggle-button {
+        padding: 7px 12px;
+        font-size: 12px;
+        flex-grow: 0; /* 모바일에선 크기 고정 */
+        flex-basis: calc(33.333% - 4px); /* 3개 버튼이 한 줄에 맞도록 (gap 고려) */
+      }
+
+      .dataFrame-container {
+        border-radius: 8px;
+        transform: scale(0.7);
+        transform-origin: 0 0;
+        width: 140%;
+      }
+
+      /* 모바일에서 iframe 스케일이 필요하다면 여기에 추가 */
+      /* 예시: Google Sheet 내용이 너무 커서 잘릴 경우
+      #branchDataFrame {
+         width: 1000px;  // 원본 콘텐츠 너비에 맞게 설정
+         height: 1500px; // 원본 콘텐츠 높이에 맞게 설정
+         transform: scale(0.7); // 적절한 스케일 값
+         transform-origin: top left;
+      }
+      #branchDataView {
+         overflow: scroll; // 스크롤 필요
+      }
+      */
+    } /* ===== 모바일 화면 스타일 끝 ===== */
+
+    /* ===== PC 화면용 스타일 (769px 이상) ===== */
+    @media screen and (min-width: 769px) {
+       /* PC에서는 기본 스타일이 대부분 적용됨 */
+       .container {
+         border-radius: 12px;
+       }
+    }
+
+    /* --- 모바일 피커 관련 스타일 (유지, 현재 사용 안 함) --- */
+    .mobile-picker-container { display: none; }
+    .picker-header { display: flex; justify-content: space-between; padding: 16px; border-bottom: 1px solid #EBEBEB; }
+    .picker-cancel, .picker-done { font-weight: 500; border: none; background: #F5F5F7; color: #888888; padding: 8px 16px; cursor: pointer; border-radius: 8px; transition: none; }
+    .picker-done.active { background: #FFFFFF; color: #222222; }
+    .picker-cancel.active { background: #FFFFFF; color: #222222; }
+  </style>
 </head>
 <body>
-  <div class="grid-container">
-    <div class="iframe-container">
-      <div class="loader" id="loader1"></div>
-      <iframe seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQVgqS2NQZ6HBXexX2zRBgn8KqbN4uFzwdwqI3xi12Z0uXvXHG_RlR-cizEbtHOPaysG20NCvexJrdD/pubchart?oid=1403897787&amp;format=interactive"></iframe>
+
+  <div class="container">
+    <div class="result-container">
+      <div class="toggle-container">
+        <button class="toggle-button active" id="sangmuButton">상무점 대상자</button>
+        <button class="toggle-button" id="sinchangButton">신창점 대상자</button>
+        <button class="toggle-button" id="ochiButton">오치점 대상자</button>
+      </div>
     </div>
-    <div class="iframe-container">
-      <div class="loader" id="loader2"></div>
-      <iframe seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQVgqS2NQZ6HBXexX2zRBgn8KqbN4uFzwdwqI3xi12Z0uXvXHG_RlR-cizEbtHOPaysG20NCvexJrdD/pubchart?oid=1680872178&amp;format=interactive"></iframe>
+
+    <div class="dataFrame-container" id="dataFrameContainer">
+      <div class="loader" id="loader"></div>
+      <div id="branchDataView">
+          <iframe id="branchDataFrame" frameborder="0"></iframe>
+      </div>
     </div>
-    <div class="iframe-container">
-      <div class="loader" id="loader3"></div>
-      <iframe seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQVgqS2NQZ6HBXexX2zRBgn8KqbN4uFzwdwqI3xi12Z0uXvXHG_RlR-cizEbtHOPaysG20NCvexJrdD/pubchart?oid=605938016&amp;format=interactive"></iframe>
-    </div>
-    <div class="iframe-container">
-      <div class="loader" id="loader4"></div>
-      <iframe seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQVgqS2NQZ6HBXexX2zRBgn8KqbN4uFzwdwqI3xi12Z0uXvXHG_RlR-cizEbtHOPaysG20NCvexJrdD/pubchart?oid=843867071&amp;format=interactive"></iframe>
-    </div>
+
+    <div class="mobile-picker-container" id="mobilePicker"></div>
   </div>
 
   <script>
-    // 모든 iframe과 로더 요소 가져오기
-    const iframes = document.querySelectorAll('.iframe-container iframe');
-    const loaders = document.querySelectorAll('.loader');
-    const containers = document.querySelectorAll('.iframe-container');
+    // 버튼 요소 가져오기 (ID 변경)
+    const sangmuButton = document.getElementById('sangmuButton');
+    const sinchangButton = document.getElementById('sinchangButton');
+    const ochiButton = document.getElementById('ochiButton');
+    const buttons = [sangmuButton, sinchangButton, ochiButton]; // 버튼 배열
+    const loader = document.getElementById('loader');
+    const dataFrameContainer = document.getElementById('dataFrameContainer');
 
-    // 각 iframe에 로딩 이벤트 리스너 추가
-    iframes.forEach((iframe, index) => {
-      // 로딩 시작 시
-      iframe.onloadstart = function() {
-        loaders[index].style.display = 'block';
-        containers[index].classList.add('loading');
-        iframe.style.opacity = 0;
-      };
+    // 데이터 표시 iframe 요소 가져오기 (ID 변경)
+    const branchDataView = document.getElementById('branchDataView'); // 필요 시 사용
+    const branchDataFrame = document.getElementById('branchDataFrame');
 
-      // 로딩 완료 시
-      iframe.onload = function() {
-        loaders[index].style.display = 'none';
-        containers[index].classList.remove('loading');
-        iframe.style.opacity = 1;
-      };
-    });
+    // 각 지점별 URL 정의
+    const branchUrls = {
+      sangmu: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFC9M1HzVvKWOkL-pRssz3KpNnlCcPdE5urlZ7s1mQbuASrLjzrGnY4xn3VtPy7Y15wXtWyCnbseCa/pubhtml?gid=36056460&amp;single=true&amp;widget=true&amp;headers=false",
+      sinchang: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFC9M1HzVvKWOkL-pRssz3KpNnlCcPdE5urlZ7s1mQbuASrLjzrGnY4xn3VtPy7Y15wXtWyCnbseCa/pubhtml?gid=179939040&amp;single=true&amp;widget=true&amp;headers=false",
+      ochi: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFC9M1HzVvKWOkL-pRssz3KpNnlCcPdE5urlZ7s1mQbuASrLjzrGnY4xn3VtPy7Y15wXtWyCnbseCa/pubhtml?gid=504941631&amp;single=true&amp;widget=true&amp;headers=false"
+    };
+
+    // 버튼 클릭 시 iframe 소스 변경 및 활성 상태 업데이트 함수
+    function handleButtonClick(clickedButton, url) {
+      if (clickedButton.classList.contains('active')) return; // 이미 활성화된 버튼이면 중단
+
+      // 로딩 스피너 표시
+      loader.style.display = 'block';
+      dataFrameContainer.classList.add('loading');
+      branchDataFrame.style.opacity = 0;
+
+      // 모든 버튼 비활성화
+      buttons.forEach(button => button.classList.remove('active'));
+      // 클릭된 버튼 활성화
+      clickedButton.classList.add('active');
+
+      setTimeout(() => {
+        branchDataFrame.src = url;
+        branchDataFrame.onload = function() {
+          loader.style.display = 'none';
+          dataFrameContainer.classList.remove('loading');
+          branchDataFrame.style.opacity = 1;
+        };
+      }, 300);
+    }
+
+    // 각 버튼에 이벤트 리스너 추가
+    sangmuButton.addEventListener('click', () => handleButtonClick(sangmuButton, branchUrls.sangmu));
+    sinchangButton.addEventListener('click', () => handleButtonClick(sinchangButton, branchUrls.sinchang));
+    ochiButton.addEventListener('click', () => handleButtonClick(ochiButton, branchUrls.ochi));
+
+    // 초기 로드 상태 설정 함수
+    function initializeView() {
+      // 로딩 스피너 표시
+      loader.style.display = 'block';
+      dataFrameContainer.classList.add('loading');
+      branchDataFrame.style.opacity = 0;
+
+      sangmuButton.classList.add('active');
+      sinchangButton.classList.remove('active');
+      ochiButton.classList.remove('active');
+
+      setTimeout(() => {
+        branchDataFrame.src = branchUrls.sangmu;
+        branchDataFrame.onload = function() {
+          loader.style.display = 'none';
+          dataFrameContainer.classList.remove('loading');
+          branchDataFrame.style.opacity = 1;
+        };
+      }, 300);
+    }
+
+    // 페이지 로드 완료 후 초기화 함수 실행
+    window.addEventListener('DOMContentLoaded', initializeView);
+
   </script>
+
 </body>
 </html>
