--- a/RewardPolicy.html
+++ b/RewardPolicy.html
@@ -77,7 +77,7 @@
       border-radius: 8px;
       padding: 4px;
       flex-wrap: wrap; /* 모바일에서 버튼 줄 바꿈 허용 */
-      gap: 4px; /* 버튼 사이 간격 (wrap 시 사용) */
+      gap: 10px; /* 버튼 사이 간격 (wrap 시 사용) */
     }
 
     /* 토글 버튼 기본 스타일 */
@@ -244,6 +244,36 @@
       background: #FFFFFF;
       color: #222222;
     }
+
+    /* 숨김 처리용 클래스 (이제 사용되지 않지만, 혹시 모르니 유지) */
+    .hidden {
+        display: none !important;
+    }
+
+    /* 로딩 스피너 스타일 */
+    .loader {
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid var(--kakao-yellow);
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      animation: spin 1s linear infinite;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 9999;
+      display: none;
+    }
+
+    @keyframes spin {
+      0% { transform: translate(-50%, -50%) rotate(0deg); }
+      100% { transform: translate(-50%, -50%) rotate(360deg); }
+    }
+
+    .dataFrame-container.loading {
+      position: relative;
+    }
   </style>
 </head>
 <body>
@@ -257,6 +287,7 @@
     </div>
 
     <div class="dataFrame-container" id="dataFrameContainer">
+      <div class="loader" id="loader"></div>
       <iframe id="dataFrame" frameborder="0"></iframe>
     </div>
 
@@ -275,6 +306,7 @@
     const incentPolicyButton = document.getElementById('listButton');
     const dataFrame = document.getElementById('dataFrame');
     const dataFrameContainer = document.getElementById('dataFrameContainer');
+    const loader = document.getElementById('loader');
 
     // 링크 정의
     const incentHistoryUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQ2mbcm-8FrS2RSU1W_c3jhW87zW8YyGHTbWuj2UxkJwEORNIlDxUq98ArSmZ7P6qrk8jBYD89ojnV_/pubhtml?widget=true&headers=false";
@@ -286,44 +318,78 @@
       if (incentHistoryButton.classList.contains('active')) {
         return;
       }
-      // Fade out (선택 사항)
-      dataFrameContainer.style.opacity = 0;
+
+      // 로딩 스피너 표시
+      loader.style.display = 'block';
+      dataFrameContainer.classList.add('loading');
+      dataFrame.style.opacity = 0;
+
       setTimeout(() => {
         dataFrame.src = incentHistoryUrl;
+        dataFrame.onload = function() {
+          loader.style.display = 'none';
+          dataFrameContainer.classList.remove('loading');
+          dataFrame.style.opacity = 1;
+        };
         incentHistoryButton.classList.add('active');
         incentPolicyButton.classList.remove('active');
-        dataFrameContainer.style.opacity = 1; // Fade in
       }, 300);
     });
 
     // "인센 정책" 버튼 클릭 이벤트
     incentPolicyButton.addEventListener('click', () => {
-       // 이미 활성화 상태면 아무것도 안함
+      // 이미 활성화 상태면 아무것도 안함
       if (incentPolicyButton.classList.contains('active')) {
         return;
       }
-      // Fade out (선택 사항)
-      dataFrameContainer.style.opacity = 0;
+
+      // 로딩 스피너 표시
+      loader.style.display = 'block';
+      dataFrameContainer.classList.add('loading');
+      dataFrame.style.opacity = 0;
+
       setTimeout(() => {
         if (incentPolicyUrl) { // URL이 있을 경우에만 로드
           dataFrame.src = incentPolicyUrl;
+          dataFrame.onload = function() {
+            loader.style.display = 'none';
+            dataFrameContainer.classList.remove('loading');
+            dataFrame.style.opacity = 1;
+          };
         } else {
           // URL이 없으면 iframe 비우고 알림 표시
           dataFrame.src = 'about:blank';
           alert("인센 정책 URL이 설정되지 않았습니다.");
+          loader.style.display = 'none';
+          dataFrameContainer.classList.remove('loading');
+          dataFrame.style.opacity = 1;
         }
         incentPolicyButton.classList.add('active');
         incentHistoryButton.classList.remove('active');
-        dataFrameContainer.style.opacity = 1; // Fade in
       }, 300);
     });
 
     // 초기 로드: "인센 내역" 활성화 및 로드
-    dataFrame.src = incentHistoryUrl;
-    // 초기 버튼 상태 설정 (HTML에서 이미 active 설정했지만, JS에서도 명시)
-    incentHistoryButton.classList.add('active');
-    incentPolicyButton.classList.remove('active');
+    function initializeView() {
+      // 로딩 스피너 표시
+      loader.style.display = 'block';
+      dataFrameContainer.classList.add('loading');
+      dataFrame.style.opacity = 0;
 
+      setTimeout(() => {
+        dataFrame.src = incentHistoryUrl;
+        dataFrame.onload = function() {
+          loader.style.display = 'none';
+          dataFrameContainer.classList.remove('loading');
+          dataFrame.style.opacity = 1;
+        };
+        incentHistoryButton.classList.add('active');
+        incentPolicyButton.classList.remove('active');
+      }, 300);
+    }
+
+    // 페이지 로드 완료 후 초기화 함수 실행
+    window.addEventListener('DOMContentLoaded', initializeView);
   </script>
 
   </body>
