--- a/CarryOver.html
+++ b/CarryOver.html
@@ -240,7 +240,6 @@
     const sinchangButton = document.getElementById('sinchangButton');
     const ochiButton = document.getElementById('ochiButton');
     const buttons = [sangmuButton, sinchangButton, ochiButton]; // 버튼 배열
-    const loader = document.getElementById('loader');
     const dataFrameContainer = document.getElementById('dataFrameContainer');
 
     // 데이터 표시 iframe 요소 가져오기 (ID 변경)
@@ -256,26 +255,14 @@
 
     // 버튼 클릭 시 iframe 소스 변경 및 활성 상태 업데이트 함수
     function handleButtonClick(clickedButton, url) {
-      if (clickedButton.classList.contains('active')) return; // 이미 활성화된 버튼이면 중단
-
-      // 로딩 스피너 표시
-      loader.style.display = 'block';
-      dataFrameContainer.classList.add('loading');
-      branchDataFrame.style.opacity = 0;
-
-      // 모든 버튼 비활성화
-      buttons.forEach(button => button.classList.remove('active'));
-      // 클릭된 버튼 활성화
+      if (clickedButton.classList.contains('active')) return;
+      buttons.forEach(btn => btn.classList.remove('active'));
       clickedButton.classList.add('active');
-
-      setTimeout(() => {
-        branchDataFrame.src = url;
-        branchDataFrame.onload = function() {
-          loader.style.display = 'none';
-          dataFrameContainer.classList.remove('loading');
-          branchDataFrame.style.opacity = 1;
-        };
-      }, 300);
+      branchDataFrame.style.opacity = 0;
+      branchDataFrame.src = url;
+      branchDataFrame.onload = () => {
+        branchDataFrame.style.opacity = 1;
+      };
     }
 
     // 각 버튼에 이벤트 리스너 추가
@@ -285,23 +272,13 @@
 
     // 초기 로드 상태 설정 함수
     function initializeView() {
-      // 로딩 스피너 표시
-      loader.style.display = 'block';
-      dataFrameContainer.classList.add('loading');
-      branchDataFrame.style.opacity = 0;
-
+      buttons.forEach(btn => btn.classList.remove('active'));
       sangmuButton.classList.add('active');
-      sinchangButton.classList.remove('active');
-      ochiButton.classList.remove('active');
-
-      setTimeout(() => {
-        branchDataFrame.src = branchUrls.sangmu;
-        branchDataFrame.onload = function() {
-          loader.style.display = 'none';
-          dataFrameContainer.classList.remove('loading');
-          branchDataFrame.style.opacity = 1;
-        };
-      }, 300);
+      branchDataFrame.style.opacity = 0;
+      branchDataFrame.src = branchUrls.sangmu;
+      branchDataFrame.onload = () => {
+        branchDataFrame.style.opacity = 1;
+      };
     }
 
     // 페이지 로드 완료 후 초기화 함수 실행
