--- a/Noshow.html
+++ b/Noshow.html
@@ -12,7 +12,7 @@
       --kakao-black: #000000;
       --kakao-gray: #666666;
     }
- 
+
     /* 기본 HTML, Body 스타일 초기화 */
     html, body {
       margin: 0;
@@ -218,30 +218,6 @@
       opacity: 0;
     }
 
-    /* 로딩 스피너 스타일 */
-    .loader {
-      border: 8px solid #f3f3f3;
-      border-top: 8px solid var(--kakao-yellow);
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      animation: spin 1s linear infinite;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 9999;
-      display: none;
-    }
-
-    @keyframes spin {
-      0% { transform: translate(-50%, -50%) rotate(0deg); }
-      100% { transform: translate(-50%, -50%) rotate(360deg); }
-    }
-
-    .dataFrame-container.loading {
-      position: relative;
-    }
 
     @media screen and (max-width: 768px) {
       .mobile-message {
@@ -263,7 +239,6 @@
     </div>
 
     <div class="dataFrame-container" id="dataFrameContainer">
-      <div class="loader" id="loader"></div>
       <div id="branchDataView">
           <iframe id="branchDataFrame" frameborder="0"></iframe>
       </div>
@@ -349,28 +324,15 @@
       return urls[branch][currentMonth] || urls[branch]['2025-04']; // 기본값으로 3월 데이터 사용
     }
 
-    const loader = document.getElementById('loader');
-
-    // 버튼 클릭 시 iframe 소스 변경 및 활성 상태 업데이트 함수
     function handleButtonClick(clickedButton, branch) {
       if (clickedButton.classList.contains('active')) return;
 
       buttons.forEach(button => button.classList.remove('active'));
       clickedButton.classList.add('active');
 
-      // 로딩 스피너 표시
-      loader.style.display = 'block';
-      dataFrameContainer.classList.add('loading');
       branchDataFrame.style.opacity = 0;
-
-      setTimeout(() => {
-        branchDataFrame.src = getCurrentUrl(branch);
-        branchDataFrame.onload = function() {
-          loader.style.display = 'none';
-          dataFrameContainer.classList.remove('loading');
-          branchDataFrame.style.opacity = 1;
-        };
-      }, 300);
+      branchDataFrame.src = getCurrentUrl(branch);
+      branchDataFrame.onload = () => { branchDataFrame.style.opacity = 1; };
     }
 
     // 각 버튼에 이벤트 리스너 추가
@@ -380,23 +342,13 @@
 
     // 초기 로드 상태 설정 함수
     function initializeView() {
-      // 로딩 스피너 표시
-      loader.style.display = 'block';
-      dataFrameContainer.classList.add('loading');
-      branchDataFrame.style.opacity = 0;
-
       sangmuButton.classList.add('active');
       sinchangButton.classList.remove('active');
       ochiButton.classList.remove('active');
 
-      setTimeout(() => {
-        branchDataFrame.src = getCurrentUrl('sangmu');
-        branchDataFrame.onload = function() {
-          loader.style.display = 'none';
-          dataFrameContainer.classList.remove('loading');
-          branchDataFrame.style.opacity = 1;
-        };
-      }, 300);
+      branchDataFrame.style.opacity = 0;
+      branchDataFrame.src = getCurrentUrl('sangmu');
+      branchDataFrame.onload = () => { branchDataFrame.style.opacity = 1; };
     }
 
     // PC에서 메뉴 숨김을 위한 스크립트
