--- a/Noshow.html
+++ b/Noshow.html
@@ -6,7 +6,7 @@
   <title>노쇼체크</title>
 
   <style>
-    /* 카카오톡 색상 변수 정의 */
+    /* 카카오톡 색상 변수 정의 좋아*/
     :root {
       --kakao-yellow: #FEE500;
       --kakao-black: #000000;
