--- a/CarryOver.html
+++ b/CarryOver.html
@@ -18,7 +18,7 @@
       margin: 0;
       padding: 0;
       height: 98%;
-      overflow: hidden; /* 가로 스크롤 방지 (필요시) */
+      overflow: hidden; /* 가로 스크롤 방지 (필요시)ddd */
       font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard", sans-serif; /* 시스템 폰트 사용 */
     }
 
